<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actions" />

    <Spinner
        android:id="@+id/acoes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/actions"
        android:entries="@array/actions"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="@string/selected_actions" />

    <ListView
        android:id="@+id/listaAcoes"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.20" >
    </ListView>

    <Button
        android:id="@+id/botaoGravar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/write_tag"
        android:onClick="botaoGravar" />

    <Button
        android:text="Escrever uma Anotação"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btAnotacao"
        android:onClick="btAnotacao"/>

</LinearLayout>