<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.csi.vinicius.appinternetc.LoginActivity">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="0dp"
        android:layout_marginBottom="8dp" android:visibility="gone"
        android:layout_weight="1" />

    <LinearLayout android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="183dp" android:orientation="vertical"
        android:layout_weight="0.50">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Login"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal" />

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" android:maxLines="1"
                android:singleLine="true"

                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText android:id="@+id/senha" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"

                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified" android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true"
                android:password="false"
                />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Entrar"
            android:id="@+id/entrar"
            android:onClick="entrar"
            android:layout_gravity="center"
            android:layout_marginTop="10dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CADASTRE-SE"
            android:id="@+id/CadastrarUsuario"
            android:layout_gravity="center_horizontal"
            android:onClick="CadastrarUsuario"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" />

    </LinearLayout>


</LinearLayout>